🚧 • Fixed z-index

--- a/css/fd.all.css
+++ b/css/fd.all.css
@@ -5,6 +5,7 @@
   --fd-height:250px;
 }
 #fd-container{
+  z-index:9999999999;
   opacity: 0;
   top:0px;
   left:0px;
